fix: remove horizontal scrollbar from the page

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -45,6 +45,7 @@
 body {
   font-family: "IntroRegularAlt";
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 h1,
 h2,
